# rust-dpdk-kaist-ok

./: Cargo.toml  README.md
dpdk-sys/: build.rs
examples/: README.md  basic_dpdk.rs  mempool_demo.rs  packet_forwarder.rs
scripts/: README.md  readme_zh.md
scripts/config/: azure.yaml  default.yaml
scripts/setup/: config.ps1
src/: lib.rs
