[workspace]
resolver = "2"

members = [
  "dpdk-sys"
]

[package]
name = "rust-dpdk"
version = "0.1.0"
edition = "2021"
authors = ["ANLAB-KAIST"]
description = "Rust bindings for DPDK (Data Plane Development Kit)"
license = "BSD-3-Clause"
repository = "https://github.com/ANLAB-KAIST/rust-dpdk"
readme = "README.md"
keywords = ["dpdk", "network", "ffi", "bindings"]
categories = ["api-bindings", "network-programming"]

[dependencies]
libc = "0.2"
rand = "0.8"
rust-dpdk-sys = { path = "dpdk-sys", version = "0.1.22110" }

[[example]]
name = "basic_dpdk"
path = "examples/basic_dpdk.rs"

[[example]]
name = "packet_forwarder"
path = "examples/packet_forwarder.rs"

[[example]]
name = "mempool_demo"
path = "examples/mempool_demo.rs"

[dev-dependencies]
